--- a/index.html
+++ b/index.html
@@ -21,6 +21,7 @@
         <p class="item3">
             Arquivos educacionais
         </p>
+        <p>lorem</p>
     </section>
     <footer>&copy todos os direitos reservados.</footer>
 </body>
